--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://jestella.github.io/quiz",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
