--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "quiz",
+  "homepage": "https://jestella.github.io/quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,12 +22,13 @@
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "https://jestella.github.io/quiz",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
