--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quiz",
-  "homepage": "https://jestella.github.io/quiz/",
+  "homepage": "https://jestella.github.io/quiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
