--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
